@@ -21,12 +21,12 @@ SOURCES = AaptAssets.cpp \
           ZipEntry.cpp \
           ZipFile.cpp
 SOURCES := $(foreach source, $(SOURCES), tools/aapt/$(source))
-CXXFLAGS += -fPIC -std=gnu++11
+CXXFLAGS += -std=gnu++11
 CPPFLAGS += -DSTATIC_ANDROIDFW_FOR_TOOLS \
             -DAAPT_VERSION=\"$(BUILD_TOOLS_VERSION)\" \
             -include android/arch/AndroidConfig.h \
             -I/usr/include/android -Iinclude
-LDFLAGS += -shared -Wl,-soname,$(NAME).so.0 \
+LDFLAGS += -fPIC -shared -Wl,-soname,$(NAME).so.0 \
            -Wl,-rpath=/usr/lib/$(DEB_HOST_MULTIARCH)/android:/usr/lib/android:. \
            -lpng -lexpat -lz \
            -L/usr/lib/android -L/usr/lib/$(DEB_HOST_MULTIARCH)/android \
